--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   },
   "require": {
     "php": ">=5.4",
-    "alchemy/zippy": "^0.3",
+    "alchemy/zippy": "^0.4",
     "doctrine/collections": "1.4.0",
     "kevinlebrun/colors.php": "^1.0",
     "michelf/php-markdown": "^1.6",
@@ -50,5 +50,10 @@
     "symfony/finder": "^3.0",
     "symfony/process": "^3.1",
     "symfony/yaml": "^3.0"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-develop": "2.9-dev"
+    }
   }
 }
